stylesheets/projects.css
/* body * {
  border:1px solid red;
  background-color: rgba(255,0,0,0.1);
} */

main {
    padding: 2em 0;
}

h2 {
    padding: 0 var(--side-padding);
}

h3 {
    width: 100%;
    margin-top: 2em;
    margin-bottom: .5em;
    font-weight: bold;
    font-size: 30px;
    text-align: center;
}

.project-wrapper {
    padding: 0 var(--side-padding);
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    height: 100vh;
    --text-color: #3C4043;
}

.project-wrapper:nth-child(even) {
    background-color: var(--ceg-lb);
    --text-color: #eee;
}

.project-wrapper:nth-child(even) * {
    color: var(--text-color);
}

.project-wrapper .project-img{
    width: 38%;
    box-shadow:  0 0 5px rgba(0,0,0,1);
}

.project-wrapper .project-intro {
    width: 58%;
    color: var(--text-color);
    font-size: 18px;
    line-height: 150%;
}

.inside-wrap{
    display: flex;
    flex:1;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.project-wrapper .scroll-bar{
    margin-bottom: 2em;
    height: 25vh;
    display: flex;
    flex-wrap: nowrap;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    -webkit-overflow-scrolling: touch;
}

.project-wrapper .scroll-bar > img {
    height: 95%;
    margin-right: 20px;
}

/* element::-webkit-scrollbar {display: none;} */

/* @media  only screen and (max-width: 600px){
    .inside-wrap{
        flex-direction: column;
    }
} */

